chore: Substitui o método .collect(Collectors.toList()) com o método mais simples .toList().